--- a/Tests/dockerFile
+++ b/Tests/dockerFile
@@ -1,6 +1,6 @@
 # Utilisation de l'image PHP Apache
 FROM php:apache
 # Copier les fichiers de votre application dans le conteneur
-COPY index.php /var/www/html/
+COPY . /var/www/html/
 # Exposer le port 80 du conteneur
 EXPOSE 80
