--- a/exercices/exercice13/dockerfile
+++ b/exercices/exercice13/dockerfile
@@ -1,6 +1,8 @@
-# Utilisation de l'image PHP Apache
 FROM php:apache
+
+RUN docker-php-ext-install pdo pdo_mysql
+
 # Copier les fichiers de votre application dans le conteneur
-COPY index.php /var/www/html/
+COPY . /var/www/html/
 # Exposer le port 80 du conteneur
 EXPOSE 80
